Fix #31 - horizontal overflow on main page

--- a/css/layout.module.scss
+++ b/css/layout.module.scss
@@ -2,6 +2,7 @@ html,
 body,
 .layout {
   margin: 0;
+  overflow-x: hidden;
 }
 
 .layout {
